sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:20: error: not found: value igap
      copy(indSorted-igap*,indSorted-gap*i+1);
                     ^